# quizzer

./: .clinerules  .cursorrules  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  PLAN.md  PR_DESCRIPTION.md  README.md  TESTING.md
.github/: copilot-instructions.md
app/: .env.test  .gitignore  README.md  TESTING.md  bun.lockb  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  vite.config.ts
hardware/: buzzers.py  mplex.py  osc_bridge.example.yaml  osc_bridge.py  pyproject.toml  requirements.txt  test_osc_bridge.py
hardware/lib/: README.md  __init__.py  test_websocket_client.py  websocket_client.py
service/: .flake8  manage.py  pyproject.toml  requirements.txt
service/fixtures/: test_game.json
service/game/: admin.py  channels.py  consumers.py  models.py  routing.py  serializers.py  services.py  tests.py  views.py
service/game/migrations/: 0001_initial.py  0002_question_answered.py  0003_player_buzzer.py  0004_team_color.py  0005_alter_board_options_question_special.py  0006_alter_question_options_alter_question_order.py  0007_player_score_version_question_state_version.py  0008_game_points_term.py  0009_replace_special_with_flags.py  0010_add_media_answer_url.py  0011_refactor_to_slides.py  0012_remove_type_field.py  0013_alter_question_flags.py  0014_category_description.py  0015_mediafile.py
service/game/tests/: __init__.py  test_consumers.py  test_fixtures.py  test_media.py  test_models.py  test_serializers.py  test_services.py  test_views.py
service/quizzer/: asgi.py  settings.py  urls.py  wsgi.py
todos/: 01-missing-requirements.md  02-websocket-business-logic.md  03-error-handling.md  03-rest-api-with-versioning.md  04-websocket-consumer-cleanup.md  04-websocket-message-inconsistency.md  05-error-handling.md  06-n-plus-one-queries.md  07-frontend-state-management.md  07-no-tests.md  08-backend-tests.md  08-channel-layer-scalability.md  09-frontend-tests.md  09-missing-database-indexes.md  10-ci-cd-quality.md  11-hardware-script-issues.md  12-upgrade-dependencies.md  13-buzzer-connection-status-ui.md  14-fix-frontend-ci-type-checking-linting.md  15-game-level-websocket-connections.md  16-account-based-authentication.md  16-refactor-frontend-api-architecture.md  (+10 more)
(+40 files in other folders)
